--- a/insights.html
+++ b/insights.html
@@ -10,7 +10,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+<header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
             <a class="nav-link" href="respondents.html">About Respondents</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="companies.html" tabindex="-1">About Companies</a>
+            <a class="nav-link" href="companies.html">About Companies</a>
         </li>
         <li>
             <a class="nav-link" href="insights.html" tabindex="-1" aria-disabled="true">Insights and Trends</a>
@@ -42,45 +42,39 @@
     </ul>
 </div>
 </header>
-<div class="container-fluid"></div>
-    <div class="row"></div>
 <div class = "container-fluid">
-    <div class="media">
-        <a href = "age_groups.png"><img src="age_groups.png" class="align-self-start mr-3" alt="..."></a>
-        <div class="media-body">
-          <h5 class="mt-0">Respondent Ages</h5>
-          <p>While the total number of respondents has changed from year to year, the trend in age has remained the same.  The highest number of respondents fall in the 25-34 year old category, followed by 35-44.  From a generational standpoint, we are seeing Gen-Xers as the most represented, followed by millenials.  Few respondents were 55 or over.</p>
+        <div class="media">
+            <a href = "comfort_supervisor.png"><img src="comfort_supervisor.png" class="align-self-start mr-3" alt="..."></a>
+            <div class="media-body">
+              <h5 class="mt-0">Comfort with Supervisor</h5>
+              <p>Employees who responded to the survey were relatively evenly distributed between levels of comfort discussing mental health issues with their supervisors.  The level of comfort discussing these issues plays a role in whether or not people take advantage of resources, benefits or leave options at work.</p>
+            </div>
         </div>
-    </div>
 </div>
 <div class = "container-fluid">
     <div class="media">
         <div class="media-body">
-            <h5 class="mt-0">Respondent Gender</h5>
-            <p>While the total number of respondents has changed from year to year, the trend in gender remains the same.  More men responded to the survey each year than wopmen.  When you consider the average demographics of tech employees, this is not surprising, as men still outnumber women in the field.  However, considering that women are more likely to be diagnosed with, or identify with, mental health issues, it is an interesting unexpected spin.</p>
-        </div>
-        <a href = "gender.png"><img src="gender.png" class="align-self-start mr-3" alt="..."></a>
-     </div>
+            <h5 class="mt-0">Comfort with Coworkers</h5>
+            <p>Interestingly, less people are comfortable discussing mental health with their coworkers than with their supervisors.</p>
+        </div>    
+        <a href = "comfort_coworker.png"><img src="comfort_coworker.png" class="align-self-start mr-3" alt="..."></a>
+    </div>
 </div>
-<div class = "container">
-    <div class = "row justify-content-start">
-        <div class = "col-6">
-            <h5 class="mt-0"> #s of Current Mental Health Diagnoses</h5>
-        </div>
-        <div class = "col-6">
-            <h5 class="mt-0"> #s of Past Mental Health Diagnoses</h5>
+<div class = "container-fluid">
+    <div class="media">
+        <a href = "bad_response.png"><img src="bad_response.png" class="align-self-start mr-3" alt="..."></a>
+        <div class="media-body">
+            <h5 class="mt-0">Negative Responses to Mental Health in the Workplace</h5>
+            <p>By and large, employees did not report witnessing any negative responses to mental health issues in the workplace, suggesting no overt negativity.</p>
         </div>
     </div>
-    <div class = "row justify-content-start">
-        <div class = "col-6">
-            <a href = "current_mh.png"><img src="current_mh.png"></a>
-        </div>
-        <div class = "col-6">
-            <a href = "past_mh.png"><img src="past_mh.png"></a>
-        </div>
-    </div> 
-    <div class="row">
-        <p>We see the same trend for both past and present mental health diagnoses in respondents across all years.  Our sample is biased towards those who identify as having a past or present diagnosis, which might skew our results.  It's something to keep in mind as we draw conclusions from the data</p>
-    </div> 
 </div>
-</body>
+<div class = "container-fluid">
+        <div class="media">
+            <div class="media-body">
+                <h5 class="mt-0">Positive Responses to Mental Health in the Workplace</h5>
+                <p>Based on the responses, by and large there have been mostly neutral to positive responses witnessed in the workplace.</p>
+            </div>    
+        <a href = "good_response.png"><img src="good_response.png" class="align-self-start mr-3" alt="..."></a>
+    </div>
+</div>
