--- a/companies.html
+++ b/companies.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-<a class="navbar-brand" href="#">Navbar</a>
+
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
 </button>
@@ -29,14 +29,14 @@
             <a class="nav-link" href="companies.html">About Companies</a>
         </li>
         <li>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Insights and Trends</a>
+            <a class="nav-link" href="insights.html" tabindex="-1" aria-disabled="true">Insights and Trends</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Raw Data</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="#">OSMI 2016</a>
-                <a class="dropdown-item" href="#">OSMI 2017</a>
-                <a class="dropdown-item" href="#">OSMI 2018</a>
+                <a class="dropdown-item" href="OSMI2016.html">OSMI 2016</a>
+                <a class="dropdown-item" href="OSMI2017.html">OSMI 2017</a>
+                <a class="dropdown-item" href="OSMI2018.html">OSMI 2018</a>
              </div>
         </li>
     </ul>
@@ -58,5 +58,23 @@
             <p>By a ratio of more than 2 to 1, companies are providing mental health benefits to their employees.  It is interesting to note the size of "I don't know" responses, suggesting that if companies do in fact have benefits, they are not doing well at communicating about them.  It should be noted that the year to year differences in responses are representative of changes in overall sample size.</p>
         </div>    
         <a href = "MH_benefits.png"><img src="MH_benefits.png" class="align-self-start mr-3" alt="..."></a>
+    </div>
+</div>
+<div class = "container-fluid">
+    <div class="media">
+        <a href = "MH_discussed.png"><img src="MH_discussed.png" class="align-self-start mr-3" alt="..."></a>
+        <div class="media-body">
+            <h5 class="mt-0">Discussing Mental Health</h5>
+            <p>When asked if their companies had discussed mental health in any kind of formal way, the majority of respondents for each year responded no.  What's interesting is that this is in spite of the fact that the majority of companies offer benefits and resources around mental health.  This suggests that even though those things exist, it is still not a regular part of the conversation for individuals at the company.</p>
+        </div>
+    </div>
+</div>
+<div class = "container-fluid">
+        <div class="media">
+            <div class="media-body">
+                <h5 class="mt-0">Anonymity around Mental Health</h5>
+                <p>Similar to what we see with discussion around mental health, when we ask employees if they feel they have anonymity in the workplace if/when they disclose mental health issues, the majority say they don't know.  This suggests a lack of supportive communication from companies, despite many of them being progessive in the availability of mental health resources and benefits.</p>
+            </div>    
+        <a href = "anonymity.png"><img src="anonymity.png" class="align-self-start mr-3" alt="..."></a>
     </div>
 </div>
