--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <a class="nav-link" href="companies.html" tabindex="-1" aria-disabled="true">About Companies</a>
         </li>
         <li>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Insights and Trends</a>
+            <a class="nav-link" href="insights.html" tabindex="-1" aria-disabled="true">Insights and Trends</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Raw Data</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="#">OSMI 2016</a>
-                <a class="dropdown-item" href="#">OSMI 2017</a>
-                <a class="dropdown-item" href="#">OSMI 2018</a>
+                <a class="dropdown-item" href="OSMI2016.html">OSMI 2016</a>
+                <a class="dropdown-item" href="OSMI2017.html">OSMI 2017</a>
+                <a class="dropdown-item" href="OSMI2018.html">OSMI 2018</a>
              </div>
         </li>
     </ul>
